# python_crawler

./: main.py  pyproject.toml
